[package]
name = "yawns"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/yawns"
description = "Shortcuts to fairly used aws commands"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "yawns"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.37", features = ["derive", "string", "env"] }
color-eyre = "0.6.3"
env_logger = "0.11.8"
log = "0.4.27"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
aws-config = { version = "1.6.2", features = ["behavior-version-latest"] }
aws-sdk-kms = { version = "1.66.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.83.0", features = ["behavior-version-latest"] }
aws-types = "1.3.7"
anstream = "0.6.18"
prettytable = "0.10.0"
futures = "0.3.31"
clap-stdin = "0.6.0"
aws-smithy-types = "1.3.1"
